--- a/app/views/layouts/_navigation_links.html.haml
+++ b/app/views/layouts/_navigation_links.html.haml
@@ -1,6 +1,6 @@
 -if user_signed_in?
   %li
-    =link_to "Feed", "#"
+    =link_to "Feed", feed_path
   %li
     =link_to "Users rating", "#"
   %li
