--- a/app/views/questions/feed.html.haml
+++ b/app/views/questions/feed.html.haml
@@ -4,7 +4,9 @@
   %tr
     %th Question author
     %th Time for answer
+    %th
   -@questions.each do |q|
     %tr
       %td= q.user.email
       %td= q.time
+      %td= link_to "Play", play_question_path(q.id), class: "btn btn-danger btn-sm"
