Modify methods to recognize & assess other_answer questions

--- a/app/views/questions/result.html.haml
+++ b/app/views/questions/result.html.haml
@@ -1,5 +1,7 @@
--if @answer.correct
+-if @answer.correct == true
   %h3 Congratulations, your answer is correct!
--else
+-elsif @answer.correct == false
   %h3 You lose, your answer is incorrect!
   %h4= @answer.question.comment
+-else @answer.correct.blank?
+  %h4 You have to wait for question author response.
