--- a/app/views/questions/show.html.haml
+++ b/app/views/questions/show.html.haml
@@ -31,3 +31,5 @@
           -else
             #{a.correct == true ? "Right" : "Wrong"}
 
+=link_to "Back", questions_path, class: "btn btn-primary"
+
