Add countdown clock

--- a/app/assets/stylesheets/1st_load_framework.css.scss
+++ b/app/assets/stylesheets/1st_load_framework.css.scss
@@ -44,3 +44,10 @@ section {
   @extend .row;
   margin-top: 20px;
   }
+
+#countdown {
+  color: #1B232F;
+  font-family: inherit;
+  font-size: 58px;
+  text-align: center;
+}
