--- a/app/views/questions/play.html.haml
+++ b/app/views/questions/play.html.haml
@@ -1,4 +1,4 @@
-%script{src: "app/assets/javascripts/jquery.countdown.js"}
+%script{src: "./app/assets/javascripts/jquery.countdown360.min.js"}
 
 %h2{align: "center"}= @question.body
 
@@ -12,40 +12,16 @@
   = f.submit 'Send answer', class: 'btn btn-info btn-block'
 
 :javascript
+  var time = #{@question.time.to_i}
   $(document).ready( function() {
     setTimeout( function(){
       $("#answer-form").submit();
     }  , #{@question.time.to_i * 1000} );
-    $("#sec").countdown({autostart: true, m: 108});
-  } );
-  function countdown( elementName, minutes, seconds )
-  {
-    var element, endTime, hours, mins, msLeft, time;
-
-    function twoDigits( n )
-    {
-        return (n <= 9 ? "0" + n : n);
-    }
-
-    function updateTimer()
-    {
-        msLeft = endTime - (+new Date);
-        if ( msLeft < 1000 ) {
-            element.innerHTML = "Your time is over!";
-        } else {
-            time = new Date( msLeft );
-            hours = time.getUTCHours();
-            mins = time.getUTCMinutes();
-            element.innerHTML = (hours ? hours + ':' + twoDigits( mins ) : mins) + ':' + twoDigits( time.getUTCSeconds() );
-            setTimeout( updateTimer, time.getUTCMilliseconds() + 500 );
-        }
-    }
-
-    element = document.getElementById( elementName );
-    endTime = (+new Date) + 1000 * (60*minutes + seconds) + 500;
-    updateTimer();
-  }
-
-  countdown( "countdown", 0, #{@question.time} );
-
-
+    $("#countdown").countdown360({
+      radius: 60,
+      seconds: time,
+      label: ['sec', 'secs'],
+      fontColor: '#FFFFFF',
+      autostart: true,
+    });
+  });
