Add simple users ratings

--- a/app/views/layouts/_navigation_links.html.haml
+++ b/app/views/layouts/_navigation_links.html.haml
@@ -2,7 +2,7 @@
   %li
     =link_to "Feed", feed_path
   %li
-    =link_to "Users rating", "#"
+    =link_to "Users rating", rating_path
   %li
     =link_to "My questions", questions_path
   %li
